--- a/kontakt.html
+++ b/kontakt.html
@@ -15,11 +15,11 @@
 
         <nav class="main-nav">
             <ul>
-                <li class="active"><a href="index.html">Forside</a></li>
+                <li><a href="index.html">Forside</a></li>
                 <li><a href="#">Om mental sundhed</a></li>
                 <li><a href="#">Strategier for velvære</a></li>
                 <li><a href="#">Om os</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li class="active"><a href="#">Kontakt</a></li>
             </ul>
         </nav>
 
