Tilføjelse af logo samt justeringer i nav og metadata

--- a/kontakt.html
+++ b/kontakt.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <title>Kontakt - Bright Spot</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="#">
+    <link rel="icon" type="image/x-icon" href="img/projekt 2 logo.svg">
 </head>
 <body>
 
     <header>
 
-        <a href="index.html"><img src="#" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="img/projekt 2 logo.svg" alt="bright spot logo" class="logo"></a>
 
         <nav class="main-nav">
             <ul>
@@ -19,7 +19,7 @@
                 <li><a href="#">Om mental sundhed</a></li>
                 <li><a href="#">Strategier for velvære</a></li>
                 <li><a href="#">Om os</a></li>
-                <li class="active"><a href="#">Kontakt</a></li>
+                <li class="active"><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
 
