--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bright Spot</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="img/projekt 2 logo.svg">
+    <link rel="icon" type="image/x-icon" href="img/projekt 2 logo2.svg">
 </head>
 <body>
 
     <header>
 
-        <a href="index.html"><img src="img/projekt 2 logo.svg" alt="bright spot logo" class="logo"></a>
+        <a href="index.html"><img src="img/projekt 2 logo2.svg" alt="bright spot logo" class="logo"></a>
 
         <nav class="main-nav">
             <ul>
-                <li class="active"><a href="index.html">Forside</a></li>
+                <li><a href="index.html" class="active">Forside</a></li>
                 <li><a href="#">Om mental sundhed</a></li>
                 <li><a href="#">Strategier for velvære</a></li>
                 <li><a href="#">Om os</a></li>
