ydelerligere css styling + js tilføjet til navigation

--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,11 @@
     <title>Kontakt - Bright Spot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/projekt 2 logo2.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Geologica:wght@100..900&family=Mochiy+Pop+One&family=Rum+Raisin&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/619f162d00.js" crossorigin="anonymous"></script>
+    <script src="js/navigation.js" defer=""></script>
 </head>
 <body>
 
