tilpasninger + tilføjelse af media queries

--- a/kontakt.html
+++ b/kontakt.html
@@ -28,6 +28,10 @@
             </ul>
         </nav>
 
+        <button id="bars">
+            <i class="fa-solid fa-bars" aria-label="navigationsmenu" aria-hidden="true"></i>
+        </button>
+
     </header>
 
     <main></main>
