Justering af navigation + placeholder bannerbillede

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <a href="index.html"><img src="img/projekt 2 logo2.svg" alt="bright spot logo" class="logo"></a>
 
         <nav class="main-nav">
+
+            <label for="search" class="visually-hidden">Søg</label>
+            <input type="search" id="search" placeholder="Søg">
+
             <ul>
                 <li><a href="index.html" class="active">Forside</a></li>
                 <li><a href="#">Om mental sundhed</a></li>
@@ -38,7 +42,7 @@
 
     <main>
 
-        
+        <div class="banner"></div>
 
     </main>
     
