--- a/index.html
+++ b/index.html
@@ -44,6 +44,64 @@
 
         <div class="banner"></div>
 
+        <section class="categories">
+
+            <section class="left-sec">
+            
+                <div class="left-div">
+
+                    <div class="left-content">
+
+                        <h2>Find hjælp</h2>
+                        <p>Har du akut brug for hjælp? Kontakt en hotline her!</p>
+                        <a href="#">Find hjælp her</a>
+
+                    </div>
+
+                    <img src="img/placeholder.jpg" alt="placeholder" class="left-img">
+
+                </div>
+
+            </section>
+
+            <section class="right-sec">
+
+                <div class="right-div">
+
+                    <img src="img/placeholder.jpg" alt="placeholder" class="right-img">
+
+                    <div class="right-content">
+
+                        <h2>Mental sundhed</h2>
+                        <p>Har du spørgsmål om mental sundhed? Vi hjælper dig på vej til ny viden.</p>
+                        <a href="#">Læs mere om mental sundhed her</a>
+
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="left-sec">
+
+                <div class="left-div">
+
+                    <div class="left-content">
+
+                        <h2>Indre balance</h2>
+                        <p>Egenomsorg er vigtigt, og hjælper dig til at skabe balance i krop og sind.</p>
+                        <a href="#">Lær mere om indre balance her</a>
+
+                    </div>
+
+                    <img src="img/placeholder.jpg" alt="placeholder" class="left-img">
+
+                </div>
+
+            </section>
+
+        </section>
+
     </main>
     
     <footer></footer>
