js tilføjet til søgebar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/619f162d00.js" crossorigin="anonymous"></script>
     <script src="js/navigation.js" defer=""></script>
 </head>
-<body cz-shortcut-listen="true">
+<body>
 
     <header>
 
@@ -26,11 +26,15 @@
             <ul>
                 <li><a href="index.html" class="active">Forside</a></li>
                 <li><a href="#">Om mental sundhed</a></li>
-                <li><a href="#">Strategier for velvære</a></li>
+                <li><a href="#">Velværestrategier</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
+
+        <button id="search-btn">
+            <i class="fa-solid fa-magnifying-glass" aria-label="søgebar" aria-hidden="true"></i>
+        </button>
 
         <button id="bars">
             <i class="fa-solid fa-bars" aria-label="navigationsmenu" aria-hidden="true"></i>
@@ -58,7 +62,7 @@
 
                     </div>
 
-                    <img src="img/placeholder.jpg" alt="placeholder" class="left-img">
+                    <img src="img/find-hjaelp.jpg" alt="placeholder" class="left-img">
 
                 </div>
 
