Mere indhold på index + tilføjelse af billeder + footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     </div>
 
-                    <img src="img/find-hjaelp.jpg" alt="placeholder" class="left-img">
+                    <img src="img/find-hjaelp.jpg" alt="to sæt hænder der holder i hånd" class="left-img">
 
                 </div>
 
@@ -72,7 +72,7 @@
 
                 <div class="right-div">
 
-                    <img src="img/placeholder.jpg" alt="placeholder" class="right-img">
+                    <img src="img/mental-sundhed.jpg" alt="illustration af tænksom person" class="right-img">
 
                     <div class="right-content">
 
@@ -98,7 +98,7 @@
 
                     </div>
 
-                    <img src="img/placeholder.jpg" alt="placeholder" class="left-img">
+                    <img src="img/indre-balance.jpg" alt="illustration af rolig og glad kvinde" class="left-img">
 
                 </div>
 
@@ -106,9 +106,51 @@
 
         </section>
 
+        <section class="textbox">
+
+            <h3>En hverdag, der fungerer</h3>
+            <p>Har du nogensinde tænkt over, hvor meget omverdenen og vores mentale helbred egentlig påvirker hinanden? Kaos og usikkerhed kan snige sig ind i os fra alle vinkler - men det samme kan ro og glæde heldigvis!</p>
+            <p>Her hos Bright Spot har vi derfor samlet en masse gode ressourcer, som forhåbentlig kan hjælpe lige præcis dig hen imod en hverdag hvor roen hersker. Vi ved, at det kan være svært at finde tid og plads til aktiv egenomsorg, men vi ved også, hvor stor en forskel det kan gøre.</p>
+            <p>Gå på opdagelse her hos Bright Spot, og gør dig klar til lyse dage forude!</p>
+
+        </section>
+
+        <section class="quote">
+            <blockquote>
+
+                <p>"Før var jeg tit træt og deprimeret. Men så prøvede jeg Bright Spot. Nu har jeg det meget bedre. Tak for hjælpen, Bright Spot!"</p>
+
+            </blockquote>
+            <cite>- anonym andefan</cite>
+        </section>
+
+
+        <section class="textbox">
+
+            <h3>Ikke alene</h3>
+            <p>Mange genkender følelsen af, at det kan være svært at snakke om, hvis man pludselig finder sig selv i en vanskelig situation.</p>
+            <p>Måske ved man ikke selv, hvor problemet mon kommer fra - eller hvorfor det er opstået. Måske er man bange for at skille sig ud, eller vise sig sårbar. Der kan være mange grunde til, at det ikke altid er nemt at tage hul på snakken.</p>
+            <p>Vi hos Bright Spot er dog ikke bange for at tage emnet op! Vi står klar til at hjælpe dig med at få svar på alle de spørgsmål, du måske brænder inde med, og vi garanterer dig, at du ikke er alene.</p>
+            <p>Der er flere end man lige tror, der kæmper med den ene eller den anden slags vanskelighed - og det er helt igennem normalt!</p>
+            <p>Ræk ud til verden og lad verden række ud til dig - du er aldrig alene om det!</p>
+
+        </section>
+
     </main>
     
-    <footer></footer>
+    <footer>
+
+        <div class="email-footer">
+            <i class="fa-solid fa-envelope" aria-hidden="true"></i>
+            <address aria-label="email"><a href="#" target="_blank">hej@brightspot.dk</a></address>
+        </div>
+
+        <div class="some-footer">
+            <a href="#" target="_blank"><i class="fa-brands fa-facebook" aria-label="Bright Spot Facebook"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-instagram" aria-label="Bright Spot Instagram"></i></a>
+        </div>
+    
+    </footer>
 
 </body>
 </html>
