--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
 
         </section>
 
+        <section class="nyhedsbrev">
+
+            <h2>Hold dig opdateret</h2>
+            <p>Som modtager af vores månedlige nyhedsbrev, får du hver gang et godt tip til et sundere indre, samt en unik succeshistorie fra en person, der måske har stået i samme situation som dig.</p>
+            <h3>Tilmeld dig her:</h3>
+            <label for="email-nyhed" class="visually-hidden">Indtast e-mail</label>
+            <input type="email" id="email-nyhed" placeholder="Indtast e-mail" required>
+            <input type="submit" class="submit-nyhed" value="Tilmeld">
+
+        </section>
+
         <section class="textbox">
 
             <h3>En hverdag, der fungerer</h3>
