--- a/kontakt.html
+++ b/kontakt.html
@@ -24,11 +24,11 @@
             <input type="search" id="search" placeholder="Søg">
 
             <ul>
-                <li><a href="index.html" class="active">Forside</a></li>
+                <li><a href="index.html">Forside</a></li>
                 <li><a href="#">Om mental sundhed</a></li>
                 <li><a href="#">Velværestrategier</a></li>
                 <li><a href="#">Om os</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="kontakt.html"  class="active">Kontakt</a></li>
             </ul>
         </nav>
 
