tilføjelse af hjælpe-hotlines

--- a/hotlines.html
+++ b/hotlines.html
@@ -46,13 +46,58 @@
 
         <h1>Ræk ud</h1>
 
-        <section class="akut">
-
-            <p>Hvis du, eller nogen, du kender, står i en akut livstruende situation, <strong>ring 122</strong></p>
-
-        </section>
+        <h2 class="akut">Hvis du, eller nogen, du kender, står i en akut livstruende situation, <strong>skal du kontakte 112, lægevagten eller den nærmeste psykiatriske akutmodtagelse.</strong></h2>
 
         <section class="hotlines">
+
+            <div class="livslinien">
+
+                <h3>Livslinien</h3>
+                <div class="ll-tel">
+                    <address>Telefonnummer: +45 70 201 201</address>
+                    <p>Telefonen er åben alle dage fra klokken 11-05</p>
+                </div>
+                <p>Chat online: <a href="livslinien.dk" target="_blank">livslinien.dk</a>
+
+            </div>
+
+            <div class="psykiatrifonden">
+
+                <h3>Psykiatrifonden - Hjælp og rådgivning</h3>
+                <address>Telefonnummer: +45 39 25 25 25</address>
+                <p>Chat online: <a href="https://psykiatrifonden.dk/hjaelp-raadgivning/chatraadgivning" target="_blank">psykiatrifonden.dk</a></p>
+
+            </div>
+
+            <div class="angst-stress">
+
+                <h3>Angst & Stress Foreningen</h3>
+                <div class="as-tel">
+                    <address>Telefonnummer - voksne: +45 70 27 13 20</address>
+                    <address>Telefonnummer - børn, unge og forældre: +45 82 30 60 70</address>
+                </div>
+                <p>Chat online: <a href="https://angstforeningen.dk/index.php?page=chatten" target="_blank">angststress.dk</a></p>
+
+            </div>
+
+            <div class="spiseforstyrrelse-selvskade">
+
+                <h3>Foreningen Spiseforstyrrelser & Selvskade</h3>
+                <address>Telefonnummer: +45 70 10 18 18</address>
+                <p>Chat online: <a href="https://spiseforstyrrelse.dk/raadgivning/chatraadgivning" target="_blank">spiseforstyrrelse.dk</a></p>
+
+            </div>
+
+            <div class="lev-uden-vold">
+
+                <h3>Lev Uden Vold</h3>
+                <div class="luv-tel">
+                    <address>Telefonnummer: 1888</address>
+                    <p>Telefonen er døgnåben</p>
+                </div>
+                <p>Find krisecenter: <a href="https://levudenvold.dk/hjaelp-og-radgivning/find-krisecenter/" target="_blank">levudenvold.dk</a></p>
+
+            </div>
 
         </section>
 
