--- a/kontakt.html
+++ b/kontakt.html
@@ -54,7 +54,7 @@
 
             <p>eller benyt vores kontaktformular nedenfor</p>
 
-            <p>Har du akut brug for hjælp, så <a href="#">find en hotline her</a> eller <strong>ring 112 i livstruende situationer.</strong></p>
+            <p>Har du akut brug for hjælp, så <a href="hotlines.html">find en hotline her</a> eller <strong>ring 112 i livstruende situationer.</strong></p>
         </section>
 
         <form action="">
