--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                         <h2>Find hjælp</h2>
                         <p>Har du akut brug for hjælp? Kontakt en hotline her!</p>
-                        <a href="#">Find hjælp her</a>
+                        <a href="hotlines.html">Find hjælp her</a>
 
                     </div>
 
