--- a/hotlines.html
+++ b/hotlines.html
@@ -53,7 +53,7 @@
             <h3>Livslinien</h3>
             <div class="ll-tel">
                 <address>Telefonnummer: +45 70 201 201</address>
-                <p>Telefonen er åben alle dage fra klokken 11-05</p>
+                <p>Telefonen er åben alle dage mellem 11-05</p>
             </div>
             <p>Chat online: <a href="livslinien.dk" target="_blank">livslinien.dk</a>
 
@@ -71,8 +71,8 @@
 
             <h3>Angst & Stress Foreningen</h3>
             <div class="as-tel">
-                <address>Telefonnummer - voksne: +45 70 27 13 20</address>
                 <address>Telefonnummer - børn, unge og forældre: +45 82 30 60 70</address>
+                <address>Telefonnummer - voksne: +45 70 27 13 20</address>
             </div>
             <p>Chat online: <a href="https://angstforeningen.dk/index.php?page=chatten" target="_blank">angststress.dk</a></p>
 
