--- a/hotlines.html
+++ b/hotlines.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,19 +25,19 @@
 
             <ul>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="#">Om mental sundhed</a></li>
-                <li><a href="#">Velværestrategier</a></li>
+                <li><a href="/mental-sundhed/index.html">Om mental sundhed</a></li>
+                <li><a href="/velvære/index.html">Velværestrategier</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
 
         <button id="search-btn">
-            <i class="fa-solid fa-magnifying-glass" aria-label="søgebar" aria-hidden="true"></i>
+            <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
         </button>
 
         <button id="bars">
-            <i class="fa-solid fa-bars" aria-label="navigationsmenu" aria-hidden="true"></i>
+            <i class="fa-solid fa-bars" aria-hidden="true"></i>
         </button>
 
     </header>
@@ -103,7 +103,7 @@
 
         <div class="email-footer">
             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
-            <address aria-label="email"><a href="#" target="_blank">hej@brightspot.dk</a></address>
+            <address><a href="#" target="_blank">hej@brightspot.dk</a></address>
         </div>
 
         <div class="some-footer">
