--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
             <ul>
                 <li><a href="index.html" class="active">Forside</a></li>
-                <li><a href="#">Om mental sundhed</a></li>
-                <li><a href="#">Velværestrategier</a></li>
+                <li><a href="/mental-sundhed/index.html">Om mental sundhed</a></li>
+                <li><a href="/velvære/index.html">Velværestrategier</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
 
         <button id="search-btn">
-            <i class="fa-solid fa-magnifying-glass" aria-label="søgebar" aria-hidden="true"></i>
+            <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
         </button>
 
         <button id="bars">
-            <i class="fa-solid fa-bars" aria-label="navigationsmenu" aria-hidden="true"></i>
+            <i class="fa-solid fa-bars" aria-hidden="true"></i>
         </button>
 
     </header>
@@ -153,7 +153,7 @@
 
         <div class="email-footer">
             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
-            <address aria-label="email"><a href="#" target="_blank">hej@brightspot.dk</a></address>
+            <address><a href="#" target="_blank">hej@brightspot.dk</a></address>
         </div>
 
         <div class="some-footer">
