--- a/kontakt.html
+++ b/kontakt.html
@@ -25,19 +25,19 @@
 
             <ul>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="#">Om mental sundhed</a></li>
-                <li><a href="#">Velværestrategier</a></li>
+                <li><a href="/mental-sundhed/index.html">Om mental sundhed</a></li>
+                <li><a href="/velvære/index.html">Velværestrategier</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="kontakt.html"  class="active">Kontakt</a></li>
             </ul>
         </nav>
 
         <button id="search-btn">
-            <i class="fa-solid fa-magnifying-glass" aria-label="søgebar" aria-hidden="true"></i>
+            <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
         </button>
 
         <button id="bars">
-            <i class="fa-solid fa-bars" aria-label="navigationsmenu" aria-hidden="true"></i>
+            <i class="fa-solid fa-bars" aria-hidden="true"></i>
         </button>
 
     </header>
@@ -50,7 +50,7 @@
             <p>Har du spørgsmål eller brug for hjælp? Tøv ikke med at skrive til os! Vi vender tilbage til dig hurtigst muligt.</p>
 
             <p>Få fat på os på email</p>
-            <address class="email-kontakt" aria-label="email-adresse"><a href="#" target="_blank">hej@brightspot.dk</a></address>
+            <address class="email-kontakt"><a href="#" target="_blank">hej@brightspot.dk</a></address>
 
             <p>eller benyt vores kontaktformular nedenfor</p>
 
@@ -109,7 +109,7 @@
 
         <div class="email-footer">
             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
-            <address aria-label="email"><a href="#" target="_blank">hej@brightspot.dk</a></address>
+            <address><a href="#" target="_blank">hej@brightspot.dk</a></address>
         </div>
 
         <div class="some-footer">
