udbygning af mental sundhedsside og velværestrategiside + styling

--- a/hotlines.html
+++ b/hotlines.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bright Spot</title>
+    <title>Hotlines - Bright Spot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/projekt 2 logo2.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,6 +41,14 @@
         </button>
 
     </header>
+
+    <nav class="breadcrumb">
+        <ol>
+            <li><a href="index.html">Forside</a></li>
+            <li class="divide" aria-hidden="true">/</li>
+            <li class="active">Hotlines</li>
+        </ol>
+    </nav>
 
     <main>
 
