udbygning af mental sundhed undersider + styling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                         <h2>Mental sundhed</h2>
                         <p>Har du spørgsmål om mental sundhed? Vi hjælper dig på vej til ny viden.</p>
-                        <a href="#">Læs mere om mental sundhed her</a>
+                        <a href="mental-sundhed/index.html">Læs mere om mental sundhed her</a>
 
                     </div>
 
@@ -94,7 +94,7 @@
 
                         <h2>Indre balance</h2>
                         <p>Egenomsorg er vigtigt, og hjælper dig til at skabe balance i krop og sind.</p>
-                        <a href="#">Lær mere om indre balance her</a>
+                        <a href="velvære/index.html">Lær nye strategier her</a>
 
                     </div>
 
