tilmeld nyhedsbrev tilføjet til footer

--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
             <h2>Hold dig opdateret</h2>
             <p>Som modtager af vores månedlige nyhedsbrev, får du hver gang et godt tip til et sundere indre, samt en unik succeshistorie fra en person, der måske har stået i samme situation som dig.</p>
             <h3>Tilmeld dig her:</h3>
-            <label for="email-nyhed" class="visually-hidden">Indtast e-mail</label>
-            <input type="email" id="email-nyhed" placeholder="Indtast e-mail" required>
-            <input type="submit" class="submit-nyhed" value="Tilmeld">
+            <form>
+                <label for="email-nyhed" class="visually-hidden">Indtast e-mail</label>
+                <input type="email" id="email-nyhed" placeholder="Indtast e-mail" required>
+                <input type="submit" class="submit-nyhed" value="Tilmeld">
+            </form>
 
         </section>
 
@@ -154,6 +156,15 @@
         <div class="email-footer">
             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
             <address><a href="#" target="_blank">hej@brightspot.dk</a></address>
+        </div>
+
+        <div class="nyhed-footer">
+            <p>Tilmeld nyhedsbrev</p>
+            <form>
+                <label for="email-nyhed" class="visually-hidden">Indtast e-mail</label>
+                <input type="email" id="email-nyhed" placeholder="Indtast e-mail" required>
+                <input type="submit" class="submit-nyhed" value="Tilmeld">
+            </form>
         </div>
 
         <div class="some-footer">
