--- a/mental-sundhed/angst.html
+++ b/mental-sundhed/angst.html
@@ -111,6 +111,15 @@
             <address><a href="#" target="_blank">hej@brightspot.dk</a></address>
         </div>
 
+        <div class="nyhed-footer">
+            <p>Tilmeld nyhedsbrev</p>
+            <form>
+                <label for="email-nyhed" class="visually-hidden">Indtast e-mail</label>
+                <input type="email" id="email-nyhed" placeholder="Indtast e-mail" required>
+                <input type="submit" class="submit-nyhed" value="Tilmeld">
+            </form>
+        </div>
+
         <div class="some-footer">
             <a href="#" target="_blank"><i class="fa-brands fa-facebook" aria-label="Bright Spot Facebook"></i></a>
             <a href="#" target="_blank"><i class="fa-brands fa-instagram" aria-label="Bright Spot Instagram"></i></a>
