udbygning af om os + styling + rettelse af links

--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="/mental-sundhed/index.html">Om mental sundhed</a></li>
                 <li><a href="/velvære/index.html">Velværestrategier</a></li>
-                <li><a href="#">Om os</a></li>
+                <li><a href="om-os.html">Om os</a></li>
                 <li><a href="kontakt.html"  class="active">Kontakt</a></li>
             </ul>
         </nav>
@@ -55,6 +55,7 @@
         <h1>Skriv til os!</h1>
 
         <section class="tekst-kontakt">
+
             <p>Har du spørgsmål eller brug for hjælp? Tøv ikke med at skrive til os! Vi vender tilbage til dig hurtigst muligt.</p>
 
             <p>Få fat på os på email</p>
@@ -63,9 +64,10 @@
             <p>eller benyt vores kontaktformular nedenfor</p>
 
             <p>Har du akut brug for hjælp, så <a href="hotlines.html">find en hotline her</a> eller <strong>ring 112 i livstruende situationer.</strong></p>
+
         </section>
 
-        <form action="">
+        <form>
 
             <div class="text">
                 <p class="asterisk">*</p>
