--- a/om-os.html
+++ b/om-os.html
@@ -60,20 +60,21 @@
         <section class="textbox">
 
             <h2>Hvem vi er</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam distinctio perferendis vitae atque esse sunt autem dignissimos deserunt! Vero, fugiat. Officia vitae aliquid tenetur facilis. Provident ipsa corrupti nam iusto.</p>
-            <p>At, excepturi magni qui quisquam aliquid blanditiis, aliquam eligendi, saepe omnis error dolore a dignissimos quibusdam asperiores ex quo veritatis commodi quia vel. Omnis assumenda eum itaque repudiandae magnam molestiae!</p>
+            <p>Bright Spot er en organisation, der arbejder for at udbrede samfundets kendskab til mental sundhed og velvære, såvel som at hjælpe de besøgende til at kunne forbedre deres mentale helbred.</p>
+            <p>Bright Spot er først og fremmest en informationsportal, men vi arbejder mod at kunne tilbyde yderligere hjælpende ressourcer, som f.eks. et anonymt diskussionsforum og mulighed for live chat med en vejleder - så følg med på vores fælles rejse, og vær på udkig efter nye features i fremtiden!</p>
             
 
         </section>
 
         <section class="textbox">
 
-            <img src="#" alt="">
-
             <h2>Vores mission</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum eaque accusantium accusamus eveniet non eos facere aperiam minus dolorem sed ipsa praesentium nemo sapiente, quia harum doloremque voluptate totam?</p>
-            <p>Expedita quia minus consectetur error ut ipsum maxime aut sed adipisci quo odit libero dolore non, sapiente officiis labore iure ab cum nesciunt placeat. Possimus ipsa itaque neque debitis similique.</p>
-            <p>Exercitationem doloremque corporis similique minima molestiae hic aliquam natus, ipsum modi animi consequatur iusto odit ducimus in dolore culpa et ad quos? Voluptates sint facilis suscipit, quod accusamus quo! Numquam?</p>
+            <p>Mental sundhed og velvære er vigtigt at vedligeholde, men at det er helt normalt at opleve mentale udfordringer af og til - du er altså ikke alene om det. Bright Spot's mål er at normalisere de problematikker, der kan opstå inden for mentalt helbred, og at bidrage til, at vi alle er velinformerede omkring hvad det kan indebære.</p>
+
+            <img src="img/vores-mission.jpg" alt="en masse hænder strakt ud og samlet i midten af en cirkel" id="mission">
+
+            <p>Derfor er Bright Spot et samlet sted, hvor du kan finde både information og hjælp. Alle fortjener muligheden for at lære sig selv at kende, og vores ønske er, at det ikke bare skal være muligt - det skal være nemt!</p>
+            <p>Så hjælp os med at hjælpe dig, og husk, at du aldrig er alene om det!</p>
 
         </section>
 
