--- a/velvære/index.html
+++ b/velvære/index.html
@@ -27,7 +27,7 @@
                 <li><a href="/index.html">Forside</a></li>
                 <li><a href="/mental-sundhed/index.html">Om mental sundhed</a></li>
                 <li><a href="/velvære/index.html" class="active">Velværestrategier</a></li>
-                <li><a href="#">Om os</a></li>
+                <li><a href="/om-os.html">Om os</a></li>
                 <li><a href="/kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
