tilføjelse af tekst til angst-side

--- a/mental-sundhed/angst.html
+++ b/mental-sundhed/angst.html
@@ -62,11 +62,15 @@
 
             <h2>Hvad er angst egentlig?</h2>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus voluptates deleniti, ex placeat inventore nihil maxime iste cum perspiciatis blanditiis sequi est? Ducimus amet explicabo saepe at ad tempora qui.</p>
+            <p>Angst er en helt naturlig, grundlæggende følelse, som de fleste mennesker oplever flere gange i livet. Hos nogen vokser angsten sig dog så stor, at det går hen og bliver en sygdom, og angst er en af de hyppigste psykiske lidelser hos unge.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis saepe nulla vitae necessitatibus provident dicta reprehenderit quam cumque sint velit!</p>
+            <p>Angst i sig selv er en frygtreaktion, som udløses i farlige eller ubehagelige situationer. Det er den, der gør, at man kan reagere hurtigt, ved f.eks. at flygte eller forsvare sig.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, iure mollitia deleniti totam id facilis reprehenderit atque quis quaerat minima facere illum perferendis eveniet architecto!</p>
+            <p>Når angsten bliver en sygdom, kommer den dog også i situationer, hvor den ikke burde opstå - ofte i helt almindelige og ufarlige hverdagssituationer. Det sker udenfor personens kontrol, og kan variere i styrke. Nogen gange opleves det som mildt ubehag i kroppen, mens det andre gange kan føre til panik og en følelse af, at man rent faktisk er døden nær.</p>
+
+            <p>De mest almindelige former for angst er generaliseret angst, hvor angsten er tilstede stort set hele tiden, og panikangst, som kan sætte ind pludseligt og intenst.</p>
+
+            <p>Angst er desuden et symptom ved mange både fysiske og psykiske lideler, men forekommer også ofte for sig selv.</p>
 
         </section>
 
@@ -74,15 +78,21 @@
 
             <h2>Symptomer på angst</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aperiam omnis voluptatum libero eos officia.</p>
+            <p>Angst viser sig på mange måder fra person til person, men her kan du læse om de mest typiske symptomer for angst:</p>
 
             <ul class="symptomliste">
-                <li>sympt1</li>
-                <li>sympt2</li>
-                <li>sympt3</li>
+                <li>Uro i kroppen</li>
+                <li>Hjertebanken, sveden og rysten</li>
+                <li>Svimmelhed</li>
+                <li>Vejrtrækningsproblemer</li>
+                <li>Trykken i brysten</li>
+                <li>Søvnproblemer</li>
+                <li>Koncentrationsproblemer</li>
+                <li>Mave- og muskelsmerter</li>
+                <li>Undvigende adfær</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quia saepe nulla sint voluptate velit modi voluptatem distinctio. Labore, illo eos? Hic saepe dolore tenetur?</p>
+            <p>Husk på, at Bright Spot ikke skal bruges som diagnosticeringsværktøj. Hvis du kan genkende nogen af disse følelser og symptomer på angst, bør du opsøge din praktiserende læge.</p>
 
         </section>
 
@@ -90,15 +100,22 @@
 
             <h2>Behandling</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, quo!</p>
+            <p>Der findes flere forskellige måder at håndtere angst, og det er ikke alle metoder, der er lige effektive for hver person. Derfor kan man prøve sig frem, og finde noget, der virker for en selv.</p>
+
+            <p>Det kan f.eks. være:</p>
 
             <ul class="behandling">
-                <li>mulighed1</li>
-                <li>mulighed2</li>
-                <li>mulighed3</li>
+                <li><a href="/velvære/mindfulness.html">Mindfulness og grounding</a></li>
+                <li><a href="/velvære/motion.html">Ændring af motionsvaner</a></li>
+                <li><a href="/velvære/søvn.html">Bedre søvn</a></li>
+                <li>Psykoedukation</li>
+                <li>Psykoterapi</li>
+                <li>Medicinsk behandling</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla suscipit reiciendis ad illo, velit corporis.</p>
+            <p>Har du angst, eller mistænker du, at du har angst, er det vigtigt at få hjælp til at håndtere det.</p>
+
+            <p>Det er desuden meget vigtigt, at du ikke på egen hånd begynder på medicinsk behandling. Medicinsk behandling skal udelukkende ske som led i en behandlingsplan udarbejdet af din læge.</p>
 
         </section>
 
